--- a/proyecto/Front/public/index.html
+++ b/proyecto/Front/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <div id="root" class="bg-secondary-subtle"></div>
