Retoques de API e interfaz de usuario / API and Front improvemente

--- a/proyecto/Front/public/index.html
+++ b/proyecto/Front/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="index.css">
+    <title>Workin</title>
   </head>
   <body>
     <div id="root" class="bg-secondary-subtle"></div>
